monitoria/mac323/4-2-33/grades/Isabela-Blucher_190855_assignsubmission_file_WordDAG.java.txt

COMPILATION ERROR

CORREÇÃO AUTOMÁTICA
Quantidade de Testes | Veredito
0 | OK
0 | Erro de Montagem (o grafo dessa query não pode ser montado)
0 | Tempo de Execução Excedido
0 | Resposta Errada
0 | Erro de Execução
Existem 26 testes, se a soma não der 26 quer dizer que houve alguma falha especial em algum teste que não foi identificada pelo corretor

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/4-2-33/tester/checker/checker' is up to date.
WordDAG.java:13: error: cannot find symbol
	Digraph G;
	^
  symbol:   class Digraph
  location: class WordDAG
WordDAG.java:14: error: cannot find symbol
	IndexSET<String> set;
	^
  symbol:   class IndexSET
  location: class WordDAG
CorretorDoVictaum.java:93: error: cannot find symbol
            args.ex.PrintDag();
                   ^
  symbol:   method PrintDag()
  location: variable ex of type WordDAG
CorretorDoVictaum.java:105: error: cannot find symbol
            args.ex.PrintPathCount(args.a, args.b);
                   ^
  symbol:   method PrintPathCount(String,String)
  location: variable ex of type WordDAG
WordDAG.java:29: error: cannot find symbol
		set = new IndexSET<String>();
		          ^
  symbol:   class IndexSET
  location: class WordDAG
WordDAG.java:44: error: cannot find symbol
		G = new Digraph (strings.length);
		        ^
  symbol:   class Digraph
  location: class WordDAG
Note: CorretorDoVictaum.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
6 errors
Second Compile Method
WordDAG.java:13: error: cannot find symbol
	Digraph G;
	^
  symbol:   class Digraph
  location: class WordDAG
WordDAG.java:14: error: cannot find symbol
	IndexSET<String> set;
	^
  symbol:   class IndexSET
  location: class WordDAG
CorretorDoVictaum.java:93: error: cannot find symbol
            args.ex.PrintDag();
                   ^
  symbol:   method PrintDag()
  location: variable ex of type WordDAG
CorretorDoVictaum.java:105: error: cannot find symbol
            args.ex.PrintPathCount(args.a, args.b);
                   ^
  symbol:   method PrintPathCount(String,String)
  location: variable ex of type WordDAG
WordDAG.java:29: error: cannot find symbol
		set = new IndexSET<String>();
		          ^
  symbol:   class IndexSET
  location: class WordDAG
WordDAG.java:44: error: cannot find symbol
		G = new Digraph (strings.length);
		        ^
  symbol:   class Digraph
  location: class WordDAG
Note: CorretorDoVictaum.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
6 errors
